CSS/style.css
@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=New+Tegomin&family=Roboto:wght@705&display=swap');

*{
    margin : 0;
    padding : 0;
}

.body{
    background: linear-gradient(135deg, #6f2e88, #0c3db6);
    min-height : 100vh;
    min-width : 100vw;
    background-size : 100vw 100vh;
    background-repeat: no-repeat;
    display : flex;
    justify-content : center;
    align-items: center;
    color : rgb(212, 148, 39);
}

#scoreBox{
    position : absolute;
    top : 1vh;
    left : 82vw;
    font-size : 2.5rem;
    font-weight : bold;
    font-family: "New Tegomin", serif;
}

#hiscoreBox{
    position : absolute;
    top : 6vh;
    left : 82vw;
    font-size : 2.5rem;
    font-weight : bold;
    font-family: "New Tegomin", serif;
}

#board{
    background: linear-gradient(to bottom, #246b8a, #204753, #295568);
    width : 45vw;
    height : 90vh;
    border: 2px solid #5fdbc2;
    border-radius: 0.5rem;
    display : grid;
    grid-template-rows: repeat(18, 1fr);
    grid-template-columns: repeat(18, 1fr);
}

.head{
    background: linear-gradient(135deg, #ed1924, #f6a7e7);
    border: 2px solid #ffffff;
    transform : scale(1.02);
    border-radius : 0.6rem;
    box-shadow: 0 0 8px #d13ab3;
}

.snake{
    background-color: rgb(0, 255, 135, 1);
    border: 1px solid #133b38;
    border-radius : 0.7rem;
    box-shadow: 0 0 6px #00ffcc;
}

.food{
    background: linear-gradient(145deg, #f1cc37, #f39154);
    border: 1px solid #fff;
    border-radius : 0.5rem;
    box-shadow: 0 0 8px #efa641;
}

#navButtons{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    position: absolute;
    right: 6vw;
    top: 60%;
    gap: 10px;
}

.key{
    border-radius : 0.25rem;
}

.key img {
    width: 4vw;
    height: 4vw;
}

.up {
    grid-column: 2/3;
    grid-row: 1/2;
}

.down {
    grid-column: 2/3;
    grid-row: 3/4;
}

.left {
    grid-column: 1/2;
    grid-row: 2/3;
}

.right {
    grid-column: 3/4;
    grid-row: 2/3;
}

.center {
    grid-column: 2/3;
    grid-row: 2/3;
}

.key:hover {
    background-color: rgba(0, 255, 200, 0.2);
    border-radius: 6px;
    box-shadow: 0 0 10px #00ffee, 0 0 20px #00ffee;
    transition: all 0.2s ease-in-out;
    transform: scale(1.1);
}

@media (max-width: 1450px){
    #scoreBox,#hiscoreBox{
         left : 78vw;
    }
}

@media (max-width: 1300px) {
    .body {
         background: linear-gradient(40deg, #6f2e88, #0c3db6);
         flex-direction : column;
         gap : 5vh;
    }

    #scoreBoxes{
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    #scoreBox{
        display: flex;
        align-items: center;
        justify-content: center;
        position : static;
    }

    #hiscoreBox{
       display: flex;
        align-items: center;
        justify-content: center;
        position : static;
    }

    #board {
        width: 86vw;
        height: 58vh;
        margin-top : 2vh;
    }

    #navBox{
        display : flex;
        width: 86vw;
        justify-content: center;
        align-items: center;
    }

    #navButtons{
       position: static;
       right: auto;
       top: auto;
    }

    .key img {
    width: 60px;
    height: 60px;
}
}

